<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_display" />

    <EditText
            android:id="@+id/et_movie"
            android:hint="@string/et_movie_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password" />
    <EditText
            android:id="@+id/et_description"
            android:hint="@string/et_description_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Language" />

    <RadioGroup
            android:id="@+id/radioGroupLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/rbtnButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn1_text"/>
        />
        <RadioButton
                android:id="@+id/rbtnButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn2_text"/>
        />
        <RadioButton
                android:id="@+id/rbtnButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn3_text"/>
        />
        <RadioButton
                android:id="@+id/rbtnButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtn4_text"/>
        />
    </RadioGroup>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Release date" />
    <EditText
            android:id="@+id/editTextRelDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter release date"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Not suitable for all audience"
                android:onClick="showCheckBox"/>
        <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Violence"
                android:layout_below="@id/checkbox1"
                android:visibility="invisible" />
        <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Language Used"
                android:layout_toRightOf="@id/checkbox1"
                android:layout_below="@id/checkbox1"
                android:visibility="invisible" />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ADD MOVIE"
                android:layout_centerInParent="true"
                android:onClick="btnClick" />
    </RelativeLayout>

</LinearLayout>